# dodocv_test_task

./: .env  .gitignore  README.md  pyproject.toml
dodocv/: config.py  main.py
results/: events.csv  report.txt
